[gd_scene load_steps=10 format=3 uid="uid://cspige2lnbcwc"]

[ext_resource type="Script" uid="uid://cqhlhqq0hfe0h" path="res://scripts/pause_menu.gd" id="1_5d2l8"]
[ext_resource type="Texture2D" uid="uid://bvpki77t00lh2" path="res://assert/UI/play.png" id="1_kukqi"]
[ext_resource type="Texture2D" uid="uid://bej4yycbugkfv" path="res://assert/UI/play_press.png" id="2_5d2l8"]
[ext_resource type="FontFile" uid="uid://d2bt6csnbt3pq" path="res://assert/font/Minecraft.ttf" id="2_7l7mv"]
[ext_resource type="Texture2D" uid="uid://bky8eqrsjqrug" path="res://assert/UI/play_hover.png" id="3_7l7mv"]
[ext_resource type="Texture2D" uid="uid://cl477ck3oltst" path="res://assert/UI/close.png" id="6_88e76"]
[ext_resource type="Texture2D" uid="uid://oyw782dfepci" path="res://assert/UI/close_press.png" id="7_knqa7"]
[ext_resource type="Texture2D" uid="uid://bqque144m5gde" path="res://assert/UI/close_hover.png" id="8_71k7c"]
[ext_resource type="AudioStream" uid="uid://dtqnufet6l6d1" path="res://assert/song/click_sound.mp3" id="9_knqa7"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5d2l8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -83.0
offset_top = 150.0
offset_right = 83.0
offset_bottom = 201.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_7l7mv")
theme_override_font_sizes/font_size = 50
text = "Pause!!"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(2.46, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -179.5
offset_right = 215.0
offset_bottom = 179.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="max_hp_label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7l7mv")
theme_override_font_sizes/font_size = 30
text = "max hp test"

[node name="attack_power_label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7l7mv")
theme_override_font_sizes/font_size = 30
text = "attack test"

[node name="attack_speed_label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7l7mv")
theme_override_font_sizes/font_size = 30
text = "attack speed test"

[node name="move_speed_label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7l7mv")
theme_override_font_sizes/font_size = 30
text = "move test"

[node name="addition_ammo_label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7l7mv")
theme_override_font_sizes/font_size = 30
text = "addition test"

[node name="exp_label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7l7mv")
theme_override_font_sizes/font_size = 30
text = "exp test"

[node name="camera_label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7l7mv")
theme_override_font_sizes/font_size = 30
text = "cam test"

[node name="ResumeButton" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -328.0
offset_right = 70.0
offset_bottom = -158.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("1_kukqi")
texture_pressed = ExtResource("2_5d2l8")
texture_hover = ExtResource("3_7l7mv")

[node name="exitButton" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -320.0
offset_right = 464.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("6_88e76")
texture_pressed = ExtResource("7_knqa7")
texture_hover = ExtResource("8_71k7c")

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-80, 696)
stream = ExtResource("9_knqa7")

[connection signal="pressed" from="Panel/exitButton" to="." method="_on_exit_button_pressed"]
